# AWS-IAM-Misconfiguration-Detector

./: Cargo.toml  readme.md  rules.json
policies/: user_policy.json
src/: aws_util.rs  main.rs
