[package]
name = "aws-misconfiguration-detector"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
colored = "2.0"
regex = "1.9"
anyhow = "1.0"
aws-config = "1.3.0"
aws-sdk-iam = "1.24.0"
aws-sdk-sts = "1.24.0"
aws-types = "1.3.10"
aws-credential-types = "1.2.0"
tokio = { version = "1.36.0", features = ["full"] }
urlencoding = "2.1"

